--- a/assets/scss/styles/_navigation.scss
+++ b/assets/scss/styles/_navigation.scss
@@ -77,6 +77,7 @@
     transition: .5s all ease;
     color: lighten($color-tundora, 25%);
     border-bottom: 2px solid transparent;
+    width: 100px;
 
     &:hover {
       border-bottom: 2px solid $color-contessa;
